[build-system]
requires = ["scikit-build-core>=0.8.0", "setuptools_scm>=8.0"]
build-backend = "scikit_build_core.build"

[project]
name = "beampower"
dynamic = ["version"]
description = "Package for beamforming/backprojection."
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.8"
authors = [
    { name = "Eric Beaucé", email = "ebeauce@ldeo.columbia.edu" },
    { name = "William Frank" },
    { name = "Léonard Seydoux" },
]
maintainers = [
    { name = "Eric Beaucé", email = "ebeauce@ldeo.columbia.edu" },
    { name = "William Frank" },
    { name = "Léonard Seydoux" },
]
keywords = ["earthquake detection", "backprojection", "beamforming"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "numpy>=1.19.5",
]

[project.urls]
GitHub = "https://github.com/ebeauce/beampower"
Documentation = "https://ebeauce.github.io/beampower"
Issues = "https://github.com/ebeauce/beampower/issues"

[tool.scikit-build]
# Forces a strict minimum CMake version
cmake.version = ">=3.24"
# Ensures your wheels get strict platform ABI tagging automatically
wheel.py-api = "cp38" 
# Authorize scikit-build-core to use third-party plugins
experimental = true

[tool.scikit-build.metadata.version]
# Automatically reads your package version from your __init__.py __version__ property
provider = "scikit_build_core.metadata.setuptools_scm"
# Points scikit-build to where your package source lives to extract the version string
provider-path = "beampower"

# FIX: Add this blank section header so setuptools_scm registers correctly!
[tool.setuptools_scm]